--- a/css/style.css
+++ b/css/style.css
@@ -74,12 +74,8 @@ body {
 
 /* 背景 / Background */
 body {
-    background: #c33c68;
-    background-image: linear-gradient(0deg,
-            #c33c68 0,
-            #bf6096 30%,
-            #266da2 60%,
-            #76dddb 100%);
+    background: #c31432;
+    background-image: linear-gradient(to right, #c31432, #240b36);
     background-attachment: fixed;
     background-size: 100vw 100vh;
 }
